# geofikpy

./: .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  geofikpy.rst  index.md  index.rst
src/: geofik.cpp  geofik.h  main.cpp
src/geofikpy/: __init__.py  _core.pyi  geofik.pyi
tests/: test_compiled.py  test_package.py
